[package]
name = "opentelemetry-surf"
version = "0.2.0"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2018"
readme = "README.md"
description = "OpenTelemetry integration for surf"
homepage = "https://github.com/asaaki/opentelemetry-surf"
repository = "https://github.com/asaaki/opentelemetry-surf"
categories = [
  "web-programming::http-client",
  "web-programming",
  "network-programming",
  "development-tools::debugging",
  "development-tools::profiling",
]
keywords = ["surf", "opentelemetry", "jaeger", "tracing", "instrumentation"]
license = "MIT OR Apache-2.0"
exclude = [".assets/*", ".github/*", "README.tpl"]
# resolver = "2"

[[example]]
name = "simple"
path = "examples/client/simple.rs"

[[example]]
name = "client"
path = "examples/client/client.rs"

[[example]]
name = "metrics"
path = "examples/client/metrics.rs"

[features]
default = []
isahc-metrics = ["isahc"]

[dependencies]
http-types = "2.10"
# depends on http-client supported isahc version
isahc = { version = "1.2", optional = true, default-features = false, features = ["http2"] }
kv-log-macro = "1.0"
opentelemetry = "0.13"
opentelemetry-semantic-conventions = "0.5"
surf = "2.2"
url = "2.2"

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
femme = "2.1"
http-client = "6.3"
isahc = { version = "1.2", default-features = false, features = ["http2"] }
opentelemetry = { version = "0.13", features = ["async-std", "rt-async-std"] }
opentelemetry-jaeger = { version = "0.12", features = ["async-std"] }
surf = { version = "2.2", features = ["curl-client"] }
