[package]
name = "opentelemetry-surf"
version = "0.5.0"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2018"
readme = "README.md"
description = "OpenTelemetry integration for surf"
homepage = "https://github.com/asaaki/opentelemetry-surf"
repository = "https://github.com/asaaki/opentelemetry-surf"
categories = [
  "web-programming::http-client",
  "web-programming",
  "network-programming",
  "development-tools::debugging",
  "development-tools::profiling",
]
keywords = ["surf", "opentelemetry", "jaeger", "tracing", "instrumentation"]
license = "MIT OR Apache-2.0"
exclude = [".assets/*", ".github/*", "README.tpl"]
# resolver = "2"

[[example]]
name = "simple"
path = "examples/client/simple.rs"

[[example]]
name = "client"
path = "examples/client/client.rs"

[[example]]
name = "metrics"
path = "examples/client/metrics.rs"

[features]
default = []
isahc-metrics = ["isahc"]

[dependencies]
http-types = "2.12"
# depends on http-client supported isahc version
isahc = { version = "0.9", optional = true, default-features = false, features = ["http2"] }
kv-log-macro = "1.0"
opentelemetry = "0.16"
opentelemetry-semantic-conventions = "0.9"
surf = "2.3"
url = "2.2"

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"] }
femme = "2.1"
http-client = "6.5"
isahc = { version = "0.9", default-features = false, features = ["http2"] }
opentelemetry = { version = "0.16", features = ["rt-async-std"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-async-std"] }
surf = { version = "2.3", features = ["curl-client"] }
